package Message; 
message NetControl
{
	required int32 sock = 1;
	optional int32 error = 2;
}
